# Velocity-Bench

QuickSilver/: install_and_run_amd.sh
QuickSilver/SYCL/: CMakeLists.txt
SeisAcoMod2D/: install_and_run_amd.sh
SeisAcoMod2D/SYCL/: CMakeLists.txt
bitcracker/: install_and_run_amd.sh
bitcracker/SYCL/: CMakeLists.txt
cudaSift/SYCL/: CMakeLists.txt
dl-cifar/: install_and_run_amd.sh
dl-cifar/SYCL/: CMakeLists.txt  handle.h  upsample.cpp
dl-cifar/SYCL/basic-dl/: lnorm_layer.h
dl-mnist/: install_and_run_amd.sh
dl-mnist/SYCL/: CMakeLists.txt  main.onednn.cpp  tensor_mgr.onednn.cpp
easywave/: install_and_run_amd.sh
easywave/SYCL/: CMakeLists.txt
ethminer/: CMakeLists.txt  install_and_run_amd.sh  install_boost1.82.0.sh  install_ethash0.4.3.sh  install_jsoncpp1.9.5.sh
ethminer/libethash-sycl/: SYCLMiner.cpp  keccak.dp.hpp
ethminer/libethcore/: Miner.h
hashtable/: install_and_run_amd.sh
hashtable/SYCL/: CMakeLists.txt
hplinpack/: install_and_run_amd.sh
reverse_time_migration/: install_and_run_amd.sh
